# tex2scs-translator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  ellipsis.yaml
kb/: intro_lang.tex  (+3 more)
src/: CMakeLists.txt  main.cpp  sc_scn_tex2scs_translator_builder.h
src/grammar/: SCnTex.g4  SCnTex.interp  SCnTex.tokens  SCnTexLexer.cpp  SCnTexLexer.h  SCnTexLexer.interp  SCnTexLexer.tokens  SCnTexParser.cpp  SCnTexParser.h  scn_tex.g4
src/translator/: SCnTex.interp  SCnTex.tokens  SCnTexLexer.cpp  SCnTexLexer.h  SCnTexLexer.interp  SCnTexLexer.tokens  SCnTexParser.cpp  SCnTexParser.h  sc_scn_tex2scs_translator.cpp  sc_scn_tex2scs_translator.h  scn_tex.interp  scn_tex.tokens  scn_texLexer.cpp  scn_texLexer.h  scn_texLexer.interp  scn_texLexer.tokens  scn_texParser.cpp  scn_texParser.h
src/translator/commands/: sc_scn_tex2scs_commands.h  sc_scn_tex2scs_translations.h  sc_scn_tex_command.cpp  sc_scn_tex_command.h  sc_scn_tex_command_defines.h  sc_scn_tex_idtf_command.cpp  sc_scn_tex_idtf_command.h  sc_scn_tex_idtf_command_defines.h  sc_scn_tex_relation_command.cpp  sc_scn_tex_relation_command.h
src/translator/commands/file/: sc_scn_tex_file_class_command.cpp  sc_scn_tex_file_class_command.h  sc_scn_tex_file_image_command.cpp  sc_scn_tex_file_image_command.h  sc_scn_tex_file_item_command.cpp  sc_scn_tex_file_item_command.h  sc_scn_tex_file_long_command.cpp  sc_scn_tex_file_long_command.h  sc_scn_tex_file_scg_item_command.cpp  sc_scn_tex_file_scg_item_command.h  sc_scn_tex_include_graphics_command.cpp  sc_scn_tex_include_graphics_command.h
src/translator/commands/flow/: sc_scn_tex_add_level_command.cpp  sc_scn_tex_add_level_command.h
src/translator/commands/format/: sc_scn_tex_begin_list_command.cpp  sc_scn_tex_begin_list_command.h  sc_scn_tex_cite_command.cpp  sc_scn_tex_cite_command.h  sc_scn_tex_end_list_command.cpp  sc_scn_tex_list_command.h  sc_scn_tex_list_item_command.cpp  sc_scn_tex_newline_command.cpp  sc_scn_tex_newline_command.h  sc_scn_tex_qq_command.cpp  sc_scn_tex_qq_command.h  sc_scn_tex_qqi_command.h  sc_scn_tex_ref_command.h  sc_scn_tex_scnitem_command.cpp  sc_scn_tex_scnitem_command.h  sc_scn_tex_textbf_command.cpp  sc_scn_tex_textbf_command.h  sc_scn_tex_textit_command.cpp  sc_scn_tex_textit_command.h  sc_scn_tex_uline_command.cpp  sc_scn_tex_uline_command.h
src/translator/commands/header/: sc_scn_tex_current_name_command.cpp  sc_scn_tex_current_name_command.h  sc_scn_tex_file_header_command.cpp  sc_scn_tex_file_header_command.h  sc_scn_tex_header_command.cpp  sc_scn_tex_header_command.h  sc_scn_tex_header_local_command.cpp  sc_scn_tex_header_local_command.h  sc_scn_tex_input_command.cpp  sc_scn_tex_input_command.h  sc_scn_tex_keyword_command.cpp  sc_scn_tex_keyword_command.h  sc_scn_tex_section_header_command.cpp  sc_scn_tex_section_header_command.h  sc_scn_tex_segment_header_command.cpp  sc_scn_tex_segment_header_command.h  sc_scn_tex_struct_header_command.cpp  sc_scn_tex_struct_header_command.h  sc_scn_tex_struct_header_local_command.cpp  sc_scn_tex_struct_header_local_command.h  sc_scn_tex_struct_identifier_command.cpp  sc_scn_tex_struct_identifier_command.h  sc_scn_tex_structidtf_command.cpp  sc_scn_tex_structidtf_command.h
src/translator/file-structs/: sc_scn_file_structs_tree.cpp  sc_scn_file_structs_tree.h
src/translator/filesystem/: sc_directory.cpp  sc_directory.h  sc_file.cpp  sc_file.h  sc_file_system.cpp  sc_file_system.h
src/translator/helper/: scs_helper.cpp  scs_helper.h
src/translator/identifiers-tree/: sc_scn_prefix_tree.cpp  sc_scn_prefix_tree.h
src/translator/log/: sc_console.cpp  sc_console.hpp  sc_log.cpp  sc_log.hpp
src/translator/stream/: sc_string_stream.cpp  sc_string_stream.h  scs_stream.cpp  scs_stream.h
src/translator/tree/: sc_scn_prefix_tree.cpp  sc_scn_prefix_tree.h
(+105 files in other folders)
